--- a/strivazon-working/src/App.css
+++ b/strivazon-working/src/App.css
@@ -36,7 +36,28 @@
     transform: rotate(360deg);
   }
 }
-.favorite{
+.favorite {
   width: 30px;
   height: 30px;
 }
+.favoritejobs {
+  width: 25px;
+  height: 25px;
+}
+.favoritejobs::after {
+  color: rgb(253, 0, 127);
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+}
+
+.favoritejobs::before {
+  content: "\f001";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  /*--adjust as necessary--*/
+  color: transparent;
+}
+/*Favorite section*/
